Update 2.01 Identify and classify information and assets.md

--- a/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
+++ b/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
@@ -171,5 +171,93 @@ Data classification and categorization are ongoing processes because the sensiti
 
 ---
 
+## 2.1.2 Asset Classification ##
+
+Assets encompass not only information, but also the physical and digital systems that house, process, and transmit it. Recognizing the diverse nature of these assets and their varying levels of sensitivity is the cornerstone of effective security. 
+
+:link: [NIST SP 1800-5 IT Asset Management](https://csrc.nist.gov/pubs/sp/1800/5/final)  offers organizations, particularly in the financial services sector, an example solution to effectively track, manage, and report on information technology (IT) assets throughout their entire lifecycle.
+
+Asset classification is a systematic and continuous process that involves identifying, categorizing, and assigning value to each asset based on its sensitivity, criticality, and the potential impact of its compromise. This process extends beyond mere data classification to encompass the hardware, software, and physical locations where information resides. For example, a smartphone containing confidential financial data would be classified as a high-value asset requiring stringent security measures, while a printer used for general office tasks would be classified as a low-value asset.
+
+A robust asset classification program could offer the following benefits:
+
+-Enhanced Security Posture: by understanding the value and sensitivity of each asset, organizations can tailor security controls to provide the appropriate level of protection. This targeted approach ensures that resources are allocated efficiently and that the most critical assets receive the highest level of security.
+- Improved Risk Management: asset classification facilitates a comprehensive risk assessment by enabling organizations to identify potential threats and vulnerabilities specific to each asset category. This knowledge empowers security teams to implement proactive measures to mitigate risks before they materialize.
+- Streamlined Operations: a well-defined asset classification framework provides a clear roadmap for managing assets throughout their lifecycle. This includes establishing procedures for asset acquisition, disposal, and data handling, ensuring compliance with regulatory requirements and minimizing security gaps.
+
+To effectively implement asset classification, organizations can adopt a tiered approach, assigning assets to different levels based on their criticality and the potential impact of their compromise. A common framework involves categorizing assets into tiers such as Tier 0 (mission-critical), Tier 1 (important), and Tier 2 (general use). Each tier is associated with specific security controls and procedures, ensuring that the level of protection aligns with the asset's value. For example, Tier 0 assets, such as databases containing sensitive customer information, would require the most stringent security measures, including access control restrictions, encryption, and regular vulnerability assessments. In contrast, Tier 2 assets, such as personal workstations, may only necessitate basic security measures like password protection and antivirus software.
+
+:brain: Asset classes should be chosen based on the organization’s unique operational, regulatory, and business requirements. Categories should reflect factors like data sensitivity, criticality to operations, value, and compliance obligations to enable effective security controls and resource prioritization.
+
+Beyond categorizing assets, organizations must establish clear procedures for data handling in all its states: at rest, in transit, and in use. For instance, data at rest on storage devices should be encrypted to protect its confidentiality. Data in transit over networks should be secured using a combination of symmetric and asymmetric encryption to ensure its integrity and confidentiality. Data in use, while being processed by applications, requires careful management of temporary storage buffers and access controls to prevent unauthorized disclosure.
+
+:link: See also 2.6.1 Data States
+
+:necktie: For effective asset management, define and classify all assets by criticality and sensitivity, engaging stakeholders to ensure accountability and alignment with business objectives.
+
+:necktie: Measure asset classification by assessing the percentage of assets accurately categorized based on sensitivity and criticality. Regularly review classification processes to ensure they align with regulatory requirements and evolving organizational needs.
+
+Implementing a comprehensive asset classification program is a foundational step towards achieving robust cybersecurity. By understanding the value of their assets and implementing appropriate security controls, organizations reduce their risk exposure and protect their most valuable resources.
+
+### Open Questions ###
+1. How does asset classification differ from data classification?
+<details>
+  <summary>Show answer</summary>
+Asset classification focuses on the sensitivity and value of information systems and assets that store, process, and transmit data, while data classification focuses solely on identifying the sensitivity of the data itself.
+</details>
+
+2. Why is it essential to classify assets according to their sensitivity and criticality?
+<details>
+  <summary>Show answer</summary>
+Classifying assets allows organizations to tailor security controls to protect assets based on their value and potential impact if compromised, ensuring appropriate resource allocation for security measures.
+</details>
+
+3. What factors should be considered when determining the classification of an asset?
+<details>
+  <summary>Show answer</summary>
+Factors include the type of data handled by the asset, the processes it performs, its importance to business operations, and the potential impact of a security breach involving that asset.
+</details>
+
+4. What is the role of a data owner in the asset classification process?
+<details>
+  <summary>Show answer</summary>
+Data owners are responsible for determining the classification level of the data and defining appropriate security controls for its protection.
+</details>
+
+5. What is the purpose of clear markings on hardware assets regarding data classification?
+<details>
+  <summary>Show answer</summary>
+Clear markings serve as a visual reminder to users about the sensitivity of data that can be processed or stored on the asset, helping to prevent accidental data breaches.
+</details>
+
+6. Explain the relationship between the classification of an asset and the classification of the data it contains.
+<details>
+  <summary>Show answer</summary>
+The classification of an asset should typically be as high as the classification of the most sensitive data it stores or processes. This ensures that the asset's security measures are adequate for the data it handles.
+</details>
+
+7. Briefly outline the first three steps in establishing a proper asset classification program.
+<details>
+  <summary>Show answer</summary>
+First, define the classification levels used by the organization. Second, establish specific criteria for determining how data is classified. Third, identify the data owners who will be responsible for classifying the data.
+</details>
+
+8. What is the importance of a data custodian in relation to classified data?
+<details>
+  <summary>Show answer</summary>
+The data custodian is responsible for the day-to-day management and protection of classified data, ensuring that it is stored, handled, and accessed according to defined security policies and procedures.
+</details>
+
+9. Why is it crucial to integrate data classification procedures into the security awareness program?
+<details>
+  <summary>Show answer</summary>
+Integrating data classification into security awareness training ensures that all employees understand the importance of data security, how to handle data at different classification levels, and their responsibilities in protecting sensitive information.
+</details>
+
+10. Briefly describe two benefits of having a well-defined asset classification system.
+<details>
+  <summary>Show answer</summary>
+Two benefits are: (1) Enhanced security posture by applying appropriate safeguards to assets based on their value; (2) Improved compliance with regulatory requirements and industry standards for data protection.
+</details>
 
 
