Update 1.02 Understand and apply security concepts.md

--- a/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
@@ -65,7 +65,7 @@ DAD (Disclosure, Alteration, Destruction) represents the opposite of the CIA tri
 
 :necktie: The CIA triad and the 5 pillars of information security represent well-known models in the field, but numerous others have emerged over the years.
 
-:link: A well detailed explanation of the CIA triad can be found for free in NIST SP 800-33 (withdrawn in 2018): https://csrc.nist.gov/pubs/sp/800/33/final
+:link: A well detailed explanation of the CIA triad can be found for free in [NIST SP 800-33 (withdrawn in 2018)](https://csrc.nist.gov/pubs/sp/800/33/final)
 
 While the CIA Triad (Confidentiality, Integrity, Availability) is the foundation of information security, Donn Parker introduced the **Parkerian Hexad**, which expands on these principles by adding three more security attributes:
 
