Update 1.02 Understand and apply security concepts.md

--- a/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.02 Understand and apply security concepts.md
@@ -107,7 +107,7 @@ Identity Assurance pertains to the degree of certainty a system possesses regard
 - **AAL2** ensures elevated confidence, mandating the provision of at least two factors.
 - **AAL3** delivers the utmost confidence, necessitating two factors alongside a cryptographic key and a physical device. This comprehensive approach, when coupled with a username/password combination, yields the highest level of authentication certainty.
 
-:link: The Identity Assurance Level (IAL) and Authenticator Assurance Level (AAL) levels 1, 2, and 3 are defined in the NIST Special Publication (SP) 800-63-3, titled Digital Identity Guidelines): https://pages.nist.gov/800-63-3/
+:link: The Identity Assurance Level (IAL) and Authenticator Assurance Level (AAL) levels 1, 2, and 3 are defined in the [NIST Special Publication (SP) 800-63-3: Digital Identity Guidelines](https://pages.nist.gov/800-63-3/)
 
 Other important concepts such as defense in depth, abstraction, data hiding, and obfuscation form the foundation of secure architectures. These principles are part of authoritative standards like ISO/IEC 27001 and NIST guidelines 
 
