Update 2.01 Identify and classify information and assets.md

--- a/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
+++ b/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
@@ -74,7 +74,7 @@ Data classification is more than just slapping labels on data. It's an ongoing p
 Here are some key steps in building a robust data classification program:
 
 1. **Define Classification Levels**: Clearly define the different levels of data sensitivity and their corresponding security requirements. 
-2. **Establish Ownership**: Identify data owners who are responsible for classifying data and ensuring its protection. 
+2. **Establish Ownership**: Identify [data owners](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1:%20Security%20and%20Risk%20Management/1.03%20Evaluate,%20apply,%20and%20sustain%20security%20governance%20principles.md#133-organizational-roles-and-responsibilities) who are responsible for classifying data and ensuring its protection. 
 3. **Develop Procedures**: Create a documented process for classifying data, including criteria, guidelines, and review mechanisms. 
 4. **Implement Security Controls**: Deploy appropriate technical and administrative controls to safeguard data at each classification level. 
 5. **Train and Educate**: Provide comprehensive training to all employees on data classification policies and procedures. 
